Change: rename the title.

--- a/Tpl/Index/index.html
+++ b/Tpl/Index/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>知乎日报</title>
+        <title>知乎日报 - 满足你的好奇心</title>
         <meta name="apple-itunes-app" content="app-id=639087967">
         <meta http-equiv="refresh" content="3;url=/news"> 
         <link rel="stylesheet" href="Public/Css/index.css">
