--- a/Tpl/Index/index.html
+++ b/Tpl/Index/index.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>知乎日报 - 满足你的好奇心</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="apple-itunes-app" content="app-id=639087967">
-        <meta http-equiv="refresh" content="3;url=/news"> 
+        <meta http-equiv="refresh" content="3;url=/news">
+        <title>知乎日报 - 满足你的好奇心</title>
         <link rel="stylesheet" href="Public/Css/index.css">
         <link rel="shortcut icon" href="http://daily.zhihu.com/favicon.ico" />
     </head>
     <body>
-        <img id="theme" alt="{$start.text}" src="{$start.img}" />
+        <img id="theme" title="{$start.text}" src="{$start.img}"/>
     </body>
 </html>
